[Scene] 	1- Make field Labels dark blue so as to be better visible on the screen. [Manifest] 	2- In the list view at the bottom there is an option "Load More" but we would like " Load More, 50, 100, 200, All". [Lab Report] 	3- Users when adding account to "requesting Party" cant find pacific oil. I assume this is a permission. The user "Kelly" is a primary user of Botavia Team. But is listed in the as sec team user for account. This bug seems to not search the accounts not primary to the user. Same issue exists in Manifest. [Admin Panel] 	4- Is it possible to remove the red text : "Warning: There are 13 active users when your subscription only allows for 10.Please deactivate some users, contact your partner or sales representative, or email sales@sugarcrm.com. For more information, see the Understanding User Types and Sugar Licenses article."

--- a/custom/themes/custom.less
+++ b/custom/themes/custom.less
@@ -340,3 +340,8 @@ span.record-edit-link-wrapper[data-name$="emergency_contact"] {
     margin-left: 40px;
     width: calc(100% - 40px);
 }
+
+// Change the Labels color through out the App
+.record-cell .record-label {
+    color: #044c7e;
+}
